# TuzkaOCR

./: .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  NOTICE  README.md  api_keys.example.yaml  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  tuzkaocr.env
api/: app.py  routes.py
models/: LICENSE  dec-A-v3.onnx  rec-E-v4.int8.onnx  vocab.json
tuzkaocr/: __init__.py  _models.py  alto.py  config.py  jobs.py  pipeline.py
tuzkaocr/layout/: __init__.py  adaptive.py  detector.py  postprocess.py  role.py
tuzkaocr/models/: LICENSE  dec-A-v3k5.onnx  dec-A-v4.onnx  rec-E-v4k7.int8.onnx  rec-E-v5.int8.onnx  role-G-v1.npz  role-H5.onnx
tuzkaocr/ocr/: __init__.py  recognizer.py  vocab.py
