[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tuzkaocr"
version = "1.0.0"
description = "OCR pipeline for scanned page and document images — ALTO XML or text output"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless==4.10.0.84",
    "numpy==2.1.3",
    "scipy==1.14.1",
    "onnxruntime==1.25.1",
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.17",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
]

[project.scripts]
tuzkaocr = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tuzkaocr*", "api*"]

[tool.setuptools.package-data]
"tuzkaocr.models" = ["*.onnx", "*.json", "LICENSE"]
